# Nyx

./: .gitignore  README.md  pyproject.toml
examples/HashPuzzle/: metadata.json
examples/HashPuzzle/src/: HashPuzzle.sol
nyx/: main.py  slither_test.py
nyx/analyze/: controller.py  group.py  profit.py  validate.py
nyx/engine/: executor.py  executor_test.py  sym_value.py
nyx/engine2/: env.py  summary_builder.py  value.py  variable.py
nyx/galaxy/: Attack.py  ContractGroup.py  ContractRepo.py
nyx/hfg/: flow.py  hybrid_flow_graph.py  inter_contract_test.py  intra_contract.py  intra_contract_test.py  msg_call_graph.py
nyx/lib/: abstract_interpretation_test.py  log.py  signal.py  slither_test.py  solc_ast.py  solidity.py  test_util.py
nyx/lib/assets/: __init__.py  erc777.py  gen_abi.py
nyx/lib/assets/contracts/: ERC1155.sol
nyx/nyx.egg-info/: PKG-INFO
supernova/: main.py
supernova/analyze/: __init__.py  config.py  observe.py  prune.py  prune_test.py
supernova/engine/: env.py  summary.py
supernova/engine2/: controller.py  engine.py  env.py  function_test.py  msg_call.py  state.py  summary.py  transfer.py  value.py
supernova/erebus_supernova.egg-info/: PKG-INFO
supernova/galaxy/: Attack.py  ContractGroup.py  ContractRepo.py
supernova/hfg/: hfg_test.py  hybrid_flow_graph.py  inter_contract.py  msg_call_graph.py
supernova/lib/: abstract_interpretation.py  slither_test.py  slither_util.py  test_util.py  types.py  z3.py
supernova/lib/assets/: erc1155.py  erc20.py  erc721.py  ether.py  transfer.py  weth9.py
supernova/lib/assets/contracts/: ERC20.sol  ERC721.sol  ERC777.sol  WETH9.sol
